--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
-<div>app-compo</div>
-<router-outlet></router-outlet>
+<app-header></app-header>
+<app-main>
+    <router-outlet></router-outlet>
+</app-main>
+<app-footer></app-footer>
