--- a/src/app/modules/list/list.component.scss
+++ b/src/app/modules/list/list.component.scss
@@ -1,5 +1,9 @@
+@import "../../../vars.scss";
+
 .zone-item{
-    background-color: pink;
-    box-shadow: pink 0px 4px 8px 0px;
-    border-radius: 12px;
+    border: 1px solid $black;
+    border-bottom: 0;
+    &:last-child{
+        border-bottom: 1px solid $black;
+    }
 }
