--- a/src/app/core/layout/header/header.component.html
+++ b/src/app/core/layout/header/header.component.html
@@ -7,9 +7,10 @@
             <span></span>
         </div-->
         <div class="d-flex">
-            <a class="d-flex header-btn white-btn">Info</a>
-            <a class="d-flex header-btn black-btn">Log In</a>
-            <a class="d-flex header-btn black-btn">Sign Up</a>
+            <a href="#" class="d-flex header-btn white-btn">Info</a>
+            <a href="/list" class="d-flex header-btn white-btn">List</a>
+            <a href="/login" class="d-flex header-btn black-btn">Log In</a>
+            <a href="/register" class="d-flex header-btn black-btn">Sign Up</a>
         </div>
       
         <!--nav id="menu" [ngClass]="menuIsOpen? 'menu-opened':''">
