maquetacion login y register

--- a/src/app/modules/list/list.component.html
+++ b/src/app/modules/list/list.component.html
@@ -3,8 +3,8 @@
     <!--ZONES LIST-->
     <section class="mb-5 mt-5">
     <h2 class="text-center pb-4">Barris de Barcelona</h2>
-    <div class="row justify-content-center">
-      <div class="col-12 mb-5">
+    <div class="d-flex justify-content-center">
+      <div class="w-100 mb-5">
         <ng-container *ngFor="let zone of zonesList$ | async">
           <div class="zone-item p-4 d-flex justify-content-between">
             <div class="left">
