--- a/src/app/modules/list/list.component.html
+++ b/src/app/modules/list/list.component.html
@@ -1,24 +1,24 @@
 
 
-    <!--ZONES LIST-->
+    <!--NEIGHBOURS LIST-->
     <section class="mb-5 mt-5">
     <h2 class="text-center pb-4">Barris de Barcelona</h2>
     <div class="d-flex justify-content-center">
       <div class="w-100 mb-5">
-        <ng-container *ngFor="let zone of zonesList$ | async">
-          <div class="zone-item p-4 d-flex justify-content-between">
+        <ng-container *ngFor="let neighbour of neighboursList$ | async">
+          <div class="neighbour-item p-4 d-flex justify-content-between">
             <div class="left">
-              <div>NOM: {{ zone.name | uppercase }}</div>
-              <div>Punts: {{ zone.points }}</div>
+              <div>NOM: {{ neighbour.name | uppercase }}</div>
+              <div>Punts: {{ neighbour.points }}</div>
             </div>
             <ng-container *ngIf="(user$ | async) as user">
             <div class="right d-sm-flex d-none">
-              <button *ngIf="user.zones.includes(zone.id); else button2" class="btn btn-primary">
-                <!--(click)=afegir "rejectZone(zone.id)"-->
+              <button *ngIf="user.neighbours.includes(neighbour.id); else button2" class="btn btn-primary">
+                <!--(click)=afegir "rejectNeighbour(neighbour.id)"-->
                 Zona seleccionada
               </button>
               <ng-template #button2>
-                <!--afegir (click)="addZone(zone.id)"-->
+                <!--afegir (click)="addNeighbour(neighbour.id)"-->
                 <button class="btn btn-secondary">Afegeix la zona</button>
               </ng-template>
             </div>
