--- a/src/app/core/layout/footer/footer.component.html
+++ b/src/app/core/layout/footer/footer.component.html
@@ -1,6 +1,6 @@
 <footer>
     <div class="row">
-        <div class="col-7  col-sm-12 col-md-3">
+        <!-- <div class="col-7  col-sm-12 col-md-3">
             LOGO
         </div>
         <div class="col-12 col-sm-4 col-md-3">
@@ -13,7 +13,7 @@
                     <a href="#">Logout</a>
                 </li>
             </ul>
-        </div>
+        </div> -->
         <!--div class="col-12 col-sm-4 col-md-3">
             <h3>Community</h3>
            
