--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,7 +15,7 @@ html{
         content: "";
         display: block;
         border: 1px solid $black;
-        background: $beige;
+        background: $yellow;
         height: 100vh;
         width: 100vw;
         position: fixed;
