--- a/src/app/core/layout/header/header.component.scss
+++ b/src/app/core/layout/header/header.component.scss
@@ -13,6 +13,7 @@
         position: relative;
         justify-content: flex-end;
         width: 100%;
+        background-color: $orange;
         #burguer{
             z-index: 1100;
             display: flex;
