--- a/src/app/core/layout/main/main.component.html
+++ b/src/app/core/layout/main/main.component.html
@@ -1,1 +1,28 @@
-<app-map></app-map>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-10">
+            <h2>Informàtica solidària</h2>
+            <h3>Busques voluntaris que ensenyin informàtica?</h3>
+            <h3>Vols ser voluntari ensenyant informàtica i guanyar descomptes en 
+                transport públic i altres avantatges?</h3>
+            <h2>Aquest és el teu lloc!</h2>
+            <h4>A Solidaritat digital(?) treballem per acostar la tecnologia a <a>les persones que 
+                que menys hi tenen accés</a>.
+            </h4>
+            <p>Si busques voluntaris que puguin fer classes, tallers o xerrades 
+                d'informàtica, escull la teva zona, entra al catàleg de voluntaris i 
+                posa't en contacte amb el/s que t'interessi/n.</p>
+            <p>Si en saps d'informàtica i vols fer voluntariat ensenyant a la gent que 
+                en necessita, registra't a aquesta pàgina, selecciona les zones on vulguis 
+                prestar els teus serveis i guanya punts per accedir a avantatges com descomptes 
+                en transport públic o servei de Bicing gratuït, entre altres. Ensenyar en zones 
+                més desfavorides et donarà més punts!
+            </p>
+        </div>
+
+    </div>
+    <div class="row">
+        <app-map></app-map>
+    </div>
+</div>
+
