--- a/src/app/core/layout/main/main.component.html
+++ b/src/app/core/layout/main/main.component.html
@@ -1,10 +1,10 @@
-<div class="container-fluid">
+<div class="container-fluid p-3 p-md-4 p-lg-5">
     <div class="row">
         <div class="col-10">
-            <h2>Informàtica solidària</h2>
-            <h3>Busques voluntaris que ensenyin informàtica?</h3>
-            <h3>Vols ser voluntari ensenyant informàtica i guanyar descomptes en 
-                transport públic i altres avantatges?</h3>
+            <h1>Informàtica solidària</h1>
+            <h2>Busques voluntaris que ensenyin informàtica?</h2>
+            <h2>Vols ser voluntari ensenyant informàtica i guanyar descomptes en 
+                transport públic i altres avantatges?</h2>
             <h2>Aquest és el teu lloc!</h2>
             <h4>A Solidaritat digital(?) treballem per acostar la tecnologia a <a>les persones que 
                 que menys hi tenen accés</a>.
@@ -22,6 +22,7 @@
 
     </div>
     <div class="row">
+        <div>Consulta l'índex de necessitat de voluntaris per zones</div>
         <app-map></app-map>
     </div>
 </div>
