--- a/src/app/core/layout/header/header.component.html
+++ b/src/app/core/layout/header/header.component.html
@@ -1,15 +1,16 @@
 <div id="header-container">
     <nav class="d-flex justify-content-between">
-        <div id="logo" class="justify-self-start">LOGO</div>
+        <div id="logo" class="justify-self-start">is</div>
         <!--div id="burguer">
             <span></span>
             <span></span>
             <span></span>
         </div-->
         <div class="d-flex">
-            <a [routerLink]="['/']" class="d-flex header-btn white-btn">Info</a>
+            <a [routerLink]="['/']" class="d-flex header-btn white-btn" >Info</a>
             <a [routerLink]="['/list']" class="d-flex header-btn white-btn">List</a>
             <a [routerLink]="['/login']" class="d-flex header-btn black-btn">Log In</a>
+            <a (click)="logOut()" class="d-flex header-btn black-btn">Log Out</a>
             <a [routerLink]="['/register']" class="d-flex header-btn black-btn">Sign Up</a>
         </div>
       
