--- a/src/app/core/layout/main/main.component.html
+++ b/src/app/core/layout/main/main.component.html
@@ -1,14 +1,19 @@
 <div class="container-fluid p-3 p-md-4 p-lg-5">
     <div class="row">
-        <div class="col-10">
-            <h1>Informàtica solidària</h1>
-            <h2>Busques voluntaris que ensenyin informàtica?</h2>
-            <h2>Vols ser voluntari ensenyant informàtica i guanyar descomptes en 
+        <div class="col-12">
+            
+            <div class="d-flex justify-content-center align-items-center flex-column mt-4 pb-5">
+                <img [src]="'../../../assets/images/contribute.svg'"/>
+                <h1 class="mt-5 text-center">Informàtica solidària</h1>
+            </div>
+
+            <h2 class="mt-5">Busques voluntaris que ensenyin informàtica?</h2>
+            <h2 class="mt-5">Vols ser voluntari ensenyant informàtica i guanyar descomptes en 
                 transport públic i altres avantatges?</h2>
-            <h2>Aquest és el teu lloc!</h2>
-            <h4>A Solidaritat digital(?) treballem per acostar la tecnologia a <a>les persones que 
+            <h2 class="p-3 text-center mt-5 mb-5 bg-blue">Aquest és el teu lloc!</h2>
+            <h3 class="mt-5 mb-3">A Solidaritat digital(?) treballem per acostar la tecnologia a <a>les persones que 
                 que menys hi tenen accés</a>.
-            </h4>
+            </h3>
             <p>Si busques voluntaris que puguin fer classes, tallers o xerrades 
                 d'informàtica, escull la teva zona, entra al catàleg de voluntaris i 
                 posa't en contacte amb el/s que t'interessi/n.</p>
@@ -21,9 +26,9 @@
         </div>
 
     </div>
-    <div class="row">
+    <!--div class="row">
         <div>Consulta l'índex de necessitat de voluntaris per zones</div>
         <app-map></app-map>
-    </div>
+    </div-->
 </div>
 
