--- a/src/vars.scss
+++ b/src/vars.scss
@@ -7,5 +7,5 @@ $yellow: #FCD384;
 $orange: #F0B38B;
 $red: #EF948C;
 $blue: #ABCFD8;
-$violet: #C67DA2;
+$violet: #ABCFD8;
 $green: rgb(190,229,176);
