--- a/src/app/core/layout/main/main.component.html
+++ b/src/app/core/layout/main/main.component.html
@@ -4,14 +4,14 @@
             
             <div class="d-flex justify-content-center align-items-center flex-column mt-4 pb-5">
                 <img [src]="'../../../assets/images/contribute.svg'"/>
-                <h1 class="mt-5 text-center">Informàtica solidària</h1>
+                <h1 class="mt-5 text-center">Informàtica Solidària</h1>
             </div>
 
             <h2 class="mt-5">Busques voluntaris que ensenyin informàtica?</h2>
             <h2 class="mt-5">Vols ser voluntari ensenyant informàtica i guanyar descomptes en 
                 transport públic i altres avantatges?</h2>
             <h2 class="p-3 text-center mt-5 mb-5 bg-blue">Aquest és el teu lloc!</h2>
-            <h3 class="mt-5 mb-3">A Solidaritat digital(?) treballem per acostar la tecnologia a <a>les persones que 
+            <h3 class="mt-5 mb-3">A Informàtica Solidària treballem per acostar la tecnologia a <a>les persones que 
                 que menys hi tenen accés</a>.
             </h3>
             <p>Si busques voluntaris que puguin fer classes, tallers o xerrades 
